# WideOpenFHE

./: CMakeLists.txt  README.md  test_advanced_refresh.cpp  test_benchmark_30s.cpp  test_encrypt_decrypt_chain.cpp  test_rapid_burst.cpp  test_wide.cpp
docs/: BENCHMARK_METHODOLOGY.md  MATHEMATICAL_FOUNDATION.md  VS_OPENFHE.md
src/: advanced_noise_refresh.h  wideopenfhe.cpp  wideopenfhe.h
